--- a/index.html
+++ b/index.html
@@ -537,6 +537,24 @@
 
 
             <div class="control-group">
+                <h3>カスタム矢印設定</h3>
+                <div class="slider-container">
+                    <label class="slider-label">
+                        矢印サイズ: <span class="slider-value" id="customArrowScaleValue">1.0</span>
+                    </label>
+                    <input type="range" class="slider" id="customArrowScaleSlider" 
+                           min="0.1" max="3.0" step="0.1" value="1.0">
+                </div>
+                <button class="btn btn-secondary" id="toggleCustomArrow" disabled>
+                    カスタム矢印: ON
+                </button>
+                <div class="info-item">
+                    <span class="info-label">カスタム矢印:</span>
+                    <span class="info-value" id="customArrowStatus">読み込み中...</span>
+                </div>
+            </div>
+
+            <div class="control-group">
                 <h3>トリミング箱座標</h3>
                 <div class="info-item">
                     <span class="info-label">X:</span>
