修正: サイドバーのボタン画像を更新
サイドバーのボタンに使用される画像を以下のように変更しました:
- パイプボタンの画像を「pipeSector.svg」に変更
- ルーラーボタンの画像を「brick.svg」に変更
- レンガボタンの画像を「ruler.svg」に変更
- パイプ追加ボタンの画像を「addPipe.svg」に変更

これにより、ボタンのアイコンがより適切なものに更新され、ユーザーインターフェースの一貫性が向上します。

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                                 <img src="assets/marker.svg" alt="マーカー" />
                             </button>
                             <button class="sidebar-button" id="addPipeBtn" title="パイプ">
-                                <img src="assets/addPipe.svg" alt="パイプ" />
+                                <img src="assets/pipeSector.svg" alt="パイプ" />
                             </button>
                             <button class="sidebar-button" id="addRulerBtn" title="ルーラー">
-                                <img src="assets/ruler.svg" alt="ルーラー" />
+                                <img src="assets/brick.svg" alt="ルーラー" />
                             </button>
                             <button class="sidebar-button" id="addBrickBtn" title="レンガ">
-                                <img src="assets/brick.svg" alt="レンガ" />
+                                <img src="assets/ruler.svg" alt="レンガ" />
                             </button>
                         </div>
                         <div class="sidebar-divider"></div>
@@ -55,7 +55,7 @@
                                 <img src="assets/addMachine.svg" alt="機械を追加" />
                             </button>
                             <button class="sidebar-button" id="addPipeAssetBtn" title="パイプを追加">
-                                <img src="assets/pipeSector.svg" alt="パイプを追加" />
+                                <img src="assets/addPipe.svg" alt="パイプを追加" />
                             </button>
                             <button class="sidebar-button" id="addFlangeBtn" title="フランジを追加">
                                 <img src="assets/flange.svg" alt="フランジを追加" />
