feat: 平行移動の矢印の向きをX/Y/Z軸で調整できるUIを追加

--- a/index.html
+++ b/index.html
@@ -176,6 +176,74 @@
                   <span class="toggle-slider"></span>
                 </label>
               </div>
+              <!-- 平行移動の矢印の向き調整 -->
+              <div class="option-divider"></div>
+              <div class="option-item">
+                <div class="option-label">平行移動の矢印の向き調整</div>
+              </div>
+              <!-- X軸矢印の回転 -->
+              <div class="option-item">
+                <div class="option-label">X軸矢印の回転</div>
+                <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">X:</span>
+                    <input type="range" id="axisHandleRotationX_X" class="option-slider" min="-180" max="180" value="0" step="1" />
+                    <span class="slider-value" id="axisHandleRotationX_X_Value">0°</span>
+                  </div>
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Y:</span>
+                    <input type="range" id="axisHandleRotationX_Y" class="option-slider" min="-180" max="180" value="0" step="1" />
+                    <span class="slider-value" id="axisHandleRotationX_Y_Value">0°</span>
+                  </div>
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Z:</span>
+                    <input type="range" id="axisHandleRotationX_Z" class="option-slider" min="-180" max="180" value="0" step="1" />
+                    <span class="slider-value" id="axisHandleRotationX_Z_Value">0°</span>
+                  </div>
+                </div>
+              </div>
+              <!-- Y軸矢印の回転 -->
+              <div class="option-item">
+                <div class="option-label">Y軸矢印の回転</div>
+                <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">X:</span>
+                    <input type="range" id="axisHandleRotationY_X" class="option-slider" min="-180" max="180" value="0" step="1" />
+                    <span class="slider-value" id="axisHandleRotationY_X_Value">0°</span>
+                  </div>
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Y:</span>
+                    <input type="range" id="axisHandleRotationY_Y" class="option-slider" min="-180" max="180" value="0" step="1" />
+                    <span class="slider-value" id="axisHandleRotationY_Y_Value">0°</span>
+                  </div>
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Z:</span>
+                    <input type="range" id="axisHandleRotationY_Z" class="option-slider" min="-180" max="180" value="0" step="1" />
+                    <span class="slider-value" id="axisHandleRotationY_Z_Value">0°</span>
+                  </div>
+                </div>
+              </div>
+              <!-- Z軸矢印の回転 -->
+              <div class="option-item">
+                <div class="option-label">Z軸矢印の回転</div>
+                <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">X:</span>
+                    <input type="range" id="axisHandleRotationZ_X" class="option-slider" min="-180" max="180" value="0" step="1" />
+                    <span class="slider-value" id="axisHandleRotationZ_X_Value">0°</span>
+                  </div>
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Y:</span>
+                    <input type="range" id="axisHandleRotationZ_Y" class="option-slider" min="-180" max="180" value="0" step="1" />
+                    <span class="slider-value" id="axisHandleRotationZ_Y_Value">0°</span>
+                  </div>
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Z:</span>
+                    <input type="range" id="axisHandleRotationZ_Z" class="option-slider" min="-180" max="180" value="0" step="1" />
+                    <span class="slider-value" id="axisHandleRotationZ_Z_Value">0°</span>
+                  </div>
+                </div>
+              </div>
               <!-- <div class="option-divider"></div> -->
             </div>
           </div>
