feat: 平行移動の矢印の追従ハンドルのデフォルトを左手前に変更

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                   <optgroup label="エッジハンドル">
                     <option value="edge:0">右奥</option>
                     <option value="edge:1">右手前</option>
-                    <option value="edge:2" selected>左奥</option>
-                    <option value="edge:3">左手前</option>
+                    <option value="edge:2">左奥</option>
+                    <option value="edge:3" selected>左手前</option>
                   </optgroup>
                   <optgroup label="頂点ハンドル">
                     <option value="corner:max-max-max">右上奥</option>
