feat: 角度スライダーを削除し、各矢印の位置調整UIに変更

--- a/index.html
+++ b/index.html
@@ -200,68 +200,68 @@
                 </select>
               </div>
               <div class="option-item">
-                <div class="option-label">平行移動の矢印の向き調整</div>
+                <div class="option-label">平行移動の矢印の位置調整</div>
               </div>
-              <!-- X軸矢印の回転 -->
+              <!-- X軸矢印の位置 -->
               <div class="option-item">
-                <div class="option-label">X軸矢印の回転</div>
+                <div class="option-label">X軸矢印の位置</div>
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">X:</span>
-                    <input type="range" id="axisHandleRotationX_X" class="option-slider" min="-180" max="180" value="0" step="1" />
-                    <span class="slider-value" id="axisHandleRotationX_X_Value">0°</span>
+                    <input type="range" id="axisHandlePositionX_X" class="option-slider" min="-2" max="2" value="-0.3" step="0.1" />
+                    <span class="slider-value" id="axisHandlePositionX_X_Value">-0.3</span>
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Y:</span>
-                    <input type="range" id="axisHandleRotationX_Y" class="option-slider" min="-180" max="180" value="0" step="1" />
-                    <span class="slider-value" id="axisHandleRotationX_Y_Value">0°</span>
+                    <input type="range" id="axisHandlePositionX_Y" class="option-slider" min="-2" max="2" value="0" step="0.1" />
+                    <span class="slider-value" id="axisHandlePositionX_Y_Value">0</span>
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Z:</span>
-                    <input type="range" id="axisHandleRotationX_Z" class="option-slider" min="-180" max="180" value="0" step="1" />
-                    <span class="slider-value" id="axisHandleRotationX_Z_Value">0°</span>
+                    <input type="range" id="axisHandlePositionX_Z" class="option-slider" min="-2" max="2" value="0" step="0.1" />
+                    <span class="slider-value" id="axisHandlePositionX_Z_Value">0</span>
                   </div>
                 </div>
               </div>
-              <!-- Y軸矢印の回転 -->
+              <!-- Y軸矢印の位置 -->
               <div class="option-item">
-                <div class="option-label">Y軸矢印の回転</div>
+                <div class="option-label">Y軸矢印の位置</div>
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">X:</span>
-                    <input type="range" id="axisHandleRotationY_X" class="option-slider" min="-180" max="180" value="0" step="1" />
-                    <span class="slider-value" id="axisHandleRotationY_X_Value">0°</span>
+                    <input type="range" id="axisHandlePositionY_X" class="option-slider" min="-2" max="2" value="0" step="0.1" />
+                    <span class="slider-value" id="axisHandlePositionY_X_Value">0</span>
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Y:</span>
-                    <input type="range" id="axisHandleRotationY_Y" class="option-slider" min="-180" max="180" value="-90" step="1" />
-                    <span class="slider-value" id="axisHandleRotationY_Y_Value">-90°</span>
+                    <input type="range" id="axisHandlePositionY_Y" class="option-slider" min="-2" max="2" value="0" step="0.1" />
+                    <span class="slider-value" id="axisHandlePositionY_Y_Value">0</span>
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Z:</span>
-                    <input type="range" id="axisHandleRotationY_Z" class="option-slider" min="-180" max="180" value="0" step="1" />
-                    <span class="slider-value" id="axisHandleRotationY_Z_Value">0°</span>
+                    <input type="range" id="axisHandlePositionY_Z" class="option-slider" min="-2" max="2" value="0" step="0.1" />
+                    <span class="slider-value" id="axisHandlePositionY_Z_Value">0</span>
                   </div>
                 </div>
               </div>
-              <!-- Z軸矢印の回転 -->
+              <!-- Z軸矢印の位置 -->
               <div class="option-item">
-                <div class="option-label">Z軸矢印の回転</div>
+                <div class="option-label">Z軸矢印の位置</div>
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">X:</span>
-                    <input type="range" id="axisHandleRotationZ_X" class="option-slider" min="-180" max="180" value="0" step="1" />
-                    <span class="slider-value" id="axisHandleRotationZ_X_Value">0°</span>
+                    <input type="range" id="axisHandlePositionZ_X" class="option-slider" min="-2" max="2" value="0.3" step="0.1" />
+                    <span class="slider-value" id="axisHandlePositionZ_X_Value">0.3</span>
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Y:</span>
-                    <input type="range" id="axisHandleRotationZ_Y" class="option-slider" min="-180" max="180" value="0" step="1" />
-                    <span class="slider-value" id="axisHandleRotationZ_Y_Value">0°</span>
+                    <input type="range" id="axisHandlePositionZ_Y" class="option-slider" min="-2" max="2" value="0" step="0.1" />
+                    <span class="slider-value" id="axisHandlePositionZ_Y_Value">0</span>
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Z:</span>
-                    <input type="range" id="axisHandleRotationZ_Z" class="option-slider" min="-180" max="180" value="90" step="1" />
-                    <span class="slider-value" id="axisHandleRotationZ_Z_Value">90°</span>
+                    <input type="range" id="axisHandlePositionZ_Z" class="option-slider" min="-2" max="2" value="0" step="0.1" />
+                    <span class="slider-value" id="axisHandlePositionZ_Z_Value">0</span>
                   </div>
                 </div>
               </div>
