feat: デフォルト値を画像の値に更新し、小数点第2位まで設定可能に、数値入力も追加

--- a/index.html
+++ b/index.html
@@ -208,18 +208,18 @@
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">X:</span>
-                    <input type="range" id="axisHandlePositionX_X" class="option-slider" min="-2" max="2" value="-0.3" step="0.1" />
-                    <span class="slider-value" id="axisHandlePositionX_X_Value">-0.3</span>
+                    <input type="range" id="axisHandlePositionX_X" class="option-slider" min="-2" max="2" value="-0.9" step="0.01" />
+                    <input type="number" id="axisHandlePositionX_X_Input" class="option-input" min="-2" max="2" value="-0.9" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Y:</span>
-                    <input type="range" id="axisHandlePositionX_Y" class="option-slider" min="-2" max="2" value="0" step="0.1" />
-                    <span class="slider-value" id="axisHandlePositionX_Y_Value">0</span>
+                    <input type="range" id="axisHandlePositionX_Y" class="option-slider" min="-2" max="2" value="-0.5" step="0.01" />
+                    <input type="number" id="axisHandlePositionX_Y_Input" class="option-input" min="-2" max="2" value="-0.5" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Z:</span>
-                    <input type="range" id="axisHandlePositionX_Z" class="option-slider" min="-2" max="2" value="0" step="0.1" />
-                    <span class="slider-value" id="axisHandlePositionX_Z_Value">0</span>
+                    <input type="range" id="axisHandlePositionX_Z" class="option-slider" min="-2" max="2" value="0.6" step="0.01" />
+                    <input type="number" id="axisHandlePositionX_Z_Input" class="option-input" min="-2" max="2" value="0.6" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
                   </div>
                 </div>
               </div>
@@ -229,18 +229,18 @@
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">X:</span>
-                    <input type="range" id="axisHandlePositionY_X" class="option-slider" min="-2" max="2" value="0" step="0.1" />
-                    <span class="slider-value" id="axisHandlePositionY_X_Value">0</span>
+                    <input type="range" id="axisHandlePositionY_X" class="option-slider" min="-2" max="2" value="0.6" step="0.01" />
+                    <input type="number" id="axisHandlePositionY_X_Input" class="option-input" min="-2" max="2" value="0.6" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Y:</span>
-                    <input type="range" id="axisHandlePositionY_Y" class="option-slider" min="-2" max="2" value="0" step="0.1" />
-                    <span class="slider-value" id="axisHandlePositionY_Y_Value">0</span>
+                    <input type="range" id="axisHandlePositionY_Y" class="option-slider" min="-2" max="2" value="0.4" step="0.01" />
+                    <input type="number" id="axisHandlePositionY_Y_Input" class="option-input" min="-2" max="2" value="0.4" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Z:</span>
-                    <input type="range" id="axisHandlePositionY_Z" class="option-slider" min="-2" max="2" value="0" step="0.1" />
-                    <span class="slider-value" id="axisHandlePositionY_Z_Value">0</span>
+                    <input type="range" id="axisHandlePositionY_Z" class="option-slider" min="-2" max="2" value="0" step="0.01" />
+                    <input type="number" id="axisHandlePositionY_Z_Input" class="option-input" min="-2" max="2" value="0" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
                   </div>
                 </div>
               </div>
@@ -250,18 +250,18 @@
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">X:</span>
-                    <input type="range" id="axisHandlePositionZ_X" class="option-slider" min="-2" max="2" value="0.3" step="0.1" />
-                    <span class="slider-value" id="axisHandlePositionZ_X_Value">0.3</span>
+                    <input type="range" id="axisHandlePositionZ_X" class="option-slider" min="-2" max="2" value="0.0" step="0.01" />
+                    <input type="number" id="axisHandlePositionZ_X_Input" class="option-input" min="-2" max="2" value="0.0" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Y:</span>
-                    <input type="range" id="axisHandlePositionZ_Y" class="option-slider" min="-2" max="2" value="0" step="0.1" />
-                    <span class="slider-value" id="axisHandlePositionZ_Y_Value">0</span>
+                    <input type="range" id="axisHandlePositionZ_Y" class="option-slider" min="-2" max="2" value="-1.1" step="0.01" />
+                    <input type="number" id="axisHandlePositionZ_Y_Input" class="option-input" min="-2" max="2" value="-1.1" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Z:</span>
-                    <input type="range" id="axisHandlePositionZ_Z" class="option-slider" min="-2" max="2" value="0" step="0.1" />
-                    <span class="slider-value" id="axisHandlePositionZ_Z_Value">0</span>
+                    <input type="range" id="axisHandlePositionZ_Z" class="option-slider" min="-2" max="2" value="-0.9" step="0.01" />
+                    <input type="number" id="axisHandlePositionZ_Z_Input" class="option-input" min="-2" max="2" value="-0.9" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
                   </div>
                 </div>
               </div>
