ui: 平行移動の矢印の追従ハンドルと位置調整のUIを非表示に

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               </div>
               <!-- 平行移動の矢印の向き調整 -->
               <div class="option-divider"></div>
-              <div class="option-item">
+              <div class="option-item" style="display: none;">
                 <div class="option-label">平行移動の矢印の追従ハンドル</div>
                 <select id="axisHandleFollowHandleSelect" class="option-select">
                   <optgroup label="エッジハンドル">
@@ -199,11 +199,11 @@
                   </optgroup>
                 </select>
               </div>
-              <div class="option-item">
+              <div class="option-item" style="display: none;">
                 <div class="option-label">平行移動の矢印の位置調整</div>
               </div>
               <!-- X軸矢印の位置 -->
-              <div class="option-item">
+              <div class="option-item" style="display: none;">
                 <div class="option-label">X軸矢印の位置</div>
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
@@ -224,7 +224,7 @@
                 </div>
               </div>
               <!-- Y軸矢印の位置 -->
-              <div class="option-item">
+              <div class="option-item" style="display: none;">
                 <div class="option-label">Y軸矢印の位置</div>
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
@@ -245,7 +245,7 @@
                 </div>
               </div>
               <!-- Z軸矢印の位置 -->
-              <div class="option-item">
+              <div class="option-item" style="display: none;">
                 <div class="option-label">Z軸矢印の位置</div>
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
