feat: 平行移動の矢印の位置調整UIを表示（XYZで調整可能、小数点第2位まで）

--- a/index.html
+++ b/index.html
@@ -176,6 +176,19 @@
                   <span class="toggle-slider"></span>
                 </label>
               </div>
+              <!-- arrow_corn専用の面の矢印の位置調整（arrow_corn選択時のみ表示） -->
+              <div id="faceArrowInnerOffsetPanel" class="option-item" style="display: none;">
+                <div class="option-label">arrow_corn 面の矢印の位置調整</div>
+                <div class="slider-control">
+                  <div class="slider-input-group">
+                    <input type="range" id="faceArrowInnerOffsetSlider" class="option-slider" min="0" max="2" step="0.1" value="0" />
+                    <input type="number" id="faceArrowInnerOffsetInput" class="option-number-input" min="0" max="2" step="0.1" value="0" />
+                  </div>
+                  <div class="slider-description" style="color: #a5a8b0; font-size: 10px; margin-top: 4px;">
+                    内側に移動（すべての矢印を同じ距離だけ内側に移動）
+                  </div>
+                </div>
+              </div>
               <!-- 平行移動の矢印の向き調整 -->
               <div class="option-item" style="display: none;">
                 <div class="option-label">平行移動の矢印の追従ハンドル</div>
@@ -198,11 +211,11 @@
                   </optgroup>
                 </select>
               </div>
-              <div class="option-item" style="display: none;">
+              <div class="option-item">
                 <div class="option-label">平行移動の矢印の位置調整</div>
               </div>
               <!-- X軸矢印の位置 -->
-              <div class="option-item" style="display: none;">
+              <div class="option-item">
                 <div class="option-label">X軸矢印の位置</div>
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
@@ -223,7 +236,7 @@
                 </div>
               </div>
               <!-- Y軸矢印の位置 -->
-              <div class="option-item" style="display: none;">
+              <div class="option-item">
                 <div class="option-label">Y軸矢印の位置</div>
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
@@ -244,7 +257,7 @@
                 </div>
               </div>
               <!-- Z軸矢印の位置 -->
-              <div class="option-item" style="display: none;">
+              <div class="option-item">
                 <div class="option-label">Z軸矢印の位置</div>
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
