--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 </div>
               </div>
               <!-- 平行移動の矢印の向き調整 -->
-              <div class="option-item" style="display: none;">
+              <div id="axisHandleFollowHandlePanel" class="option-item" style="display: none;">
                 <div class="option-label">平行移動の矢印の追従ハンドル</div>
                 <select id="axisHandleFollowHandleSelect" class="option-select">
                   <optgroup label="エッジハンドル">
@@ -241,13 +241,13 @@
                 <div style="display: flex; flex-direction: column; gap: 4px; width: 100%;">
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">X:</span>
-                    <input type="range" id="axisHandlePositionY_X" class="option-slider" min="-2" max="2" value="0.56" step="0.01" />
-                    <input type="number" id="axisHandlePositionY_X_Input" class="option-input" min="-2" max="2" value="0.56" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
+                    <input type="range" id="axisHandlePositionY_X" class="option-slider" min="-2" max="2" value="0.57" step="0.01" />
+                    <input type="number" id="axisHandlePositionY_X_Input" class="option-input" min="-2" max="2" value="0.57" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Y:</span>
-                    <input type="range" id="axisHandlePositionY_Y" class="option-slider" min="-2" max="2" value="0.00" step="0.01" />
-                    <input type="number" id="axisHandlePositionY_Y_Input" class="option-input" min="-2" max="2" value="0.00" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
+                    <input type="range" id="axisHandlePositionY_Y" class="option-slider" min="-2" max="10" value="0.50" step="0.01" />
+                    <input type="number" id="axisHandlePositionY_Y_Input" class="option-input" min="-2" max="10" value="0.50" step="0.01" style="width: 60px; padding: 2px 4px; background: #2c2d30; border: 1px solid #3d3e42; border-radius: 4px; color: #edeff2; font-size: 11px;" />
                   </div>
                   <div style="display: flex; align-items: center; gap: 8px;">
                     <span style="color: #a5a8b0; font-size: 11px; min-width: 20px;">Z:</span>
